<resources>
    <string name="app_name">Meeple</string>
    <string name="hint_email">Email</string>
    <string name="btn_sigh_in">Sign In</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_map">Карта</string>
    <string name="title_events">События</string>
    <string name="title_profile">Профиль</string>
    <string name="btn_register">Регистрация</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_account">Нет аккаунта? <u>Зарегистрируйтесь</u></string>
    <string name="already_have_account">Уже есть аккаунт? <b><u>Войти</u></b></string>
    <string name="registration">Регистрация</string>
    <string name="registration_info">Заполните все поля, чтобы создать аккаунт</string>
    <string name="username">Имя пользователя</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="create">Создать</string>
    <string name="login">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_friends">Мои друзья</string>
    <string name="add_event">Добавить событие</string>
    <string name="title">Название события</string>
    <string name="people_count">Количество участников</string>
    <string name="people_level">Уровень игроков</string>
    <string name="confirm_email">Подтверждение почты</string>
    <string name="hint_confirm_email">На указанную почту отправлен код.Введите его в поле ниже для подтверждения почты</string>
    <string name="code">Код</string>
    <string name="confirm">Подтвердить</string>
    <string name="input_nickname">Введите никнейм от аккаунта, в котором хотите изменить пароль для входа</string>
    <string name="reset_password">Введите новый пароль</string>
</resources>