<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/WelcomeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_image" />

    <TextView
        android:id="@+id/WelcomeHeaderTextView"
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="Добро пожаловать\n в Meeple!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeImageView" />

    <TextView
        android:id="@+id/subHeaderTextView"
        style="@style/TintTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="Введите имя пользователя и пароль, \nчтобы войти"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeHeaderTextView" />

    <EditText
        android:id="@+id/PasswordEditText"
        style="@style/InputStyle"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic__lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserNameEditText" />

    <EditText
        android:id="@+id/UserNameEditText"
        style="@style/InputStyle"
        android:layout_width="335dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic__nickname"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subHeaderTextView" />

    <TextView
        android:id="@+id/ForgotPassTextView"
        style="@style/TintTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:text="@string/forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordEditText" />

    <Button
        android:id="@+id/loginButton"
        style="@style/ButtonStyle"
        android:layout_marginTop="45dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordEditText" />

    <TextView
        android:id="@+id/NoAccountTextView"
        style="@style/TintTextStyle"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:text="@string/no_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="9dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>